# oscslip-proxy

./: .gitignore  README.md  __main__.py  pyproject.toml  python-oscslip-proxy  requirements.txt
oscslip_proxy/: __init__.py  osc_server.py  serial_proxy.py  slipDecoder.py
